src/validation/tests/snapshots/rusty__validation__tests__reference_resolve_tests__reference_to_private_variable_is_illegal.snap
---
source: src/validation/tests/reference_resolve_tests.rs
expression: "&diagnostics"
---
error[E049]: Illegal access to private member prg.s
  ┌─ <internal>:9:21
  │
9 │                 prg.s := 7;
  │                     ^ Illegal access to private member prg.s


